# ai-engineering-fordham

./: .gitignore  5.you-can-just-build-things.ipynb  homework-1.ipynb  homework-2.ipynb  homework-3.ipynb  homework-4.ipynb  homework-5.ipynb  pyproject.toml
scripts/: fordham_rag_app.py
temp/: descriptions.json  metadata.json
temp/lancedb/dogs.lance/_indices/ac1e38ae-ec72-4b96-a8e0-b70627a1317a/: part_0_invert.lance
temp/lancedb/dogs.lance/_indices/f3ae1677-9f1e-4570-8dc5-7cc6df186684/: part_0_docs.lance  part_0_tokens.lance
temp/lancedb/dogs.lance/_transactions/: 0-62eba354-486e-4117-ab35-55f92d624c9e.txn  1-f91ef8e4-02c3-4a85-ad8f-4001a5903bcf.txn  2-4bcfe486-dcdb-4383-b6af-a4b1205fa765.txn  3-56962493-2077-467e-8132-19817d0c8d4b.txn
