[project]
name = "ai-engineering-fordham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.60.0",
    "jupyter>=1.1.1",
    "litellm>=1.81.4",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pystemmer>=3.0.0",
]
